--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: DeathNotePlugin
 version: '${version}'
 main: com.github.mckumama3.deathnoteplugin.deathnoteplugin.DeathNotePlugin
 api-version: 1.17
+
+commands:
+  start:
+    description: start Game
